removed sliders and added input fields and their validation, as it is much faster

--- a/app/Locale/deu/LC_MESSAGES/default.po
+++ b/app/Locale/deu/LC_MESSAGES/default.po
@@ -944,3 +944,6 @@ msgstr "Reservation löschen"
 
 msgid "payment info"
 msgstr "Zahlungsinfos"
+
+msgid  "not more than 10 franks"
+msgstr "Achtung! dein Preisgeld Muss insgesamt genau 10 Franken sein!"
