--- a/app/Locale/deu/LC_MESSAGES/default.po
+++ b/app/Locale/deu/LC_MESSAGES/default.po
@@ -950,3 +950,6 @@ msgstr "Achtung! Dein Preisgeld Muss insgesamt genau 10 Franken sein!"
 
 msgid  "all prices have to equal 10 franks"
 msgstr "Alle Preisgelder zusammen müssen exakt 10 Franken sein!"
+
+msgid  "you can reserve a seat as soon as we recieve your payment"
+msgstr "Sobald wir deine Zahlung erhalten haben kannst du einen Sitzplatz reservieren."
