changed some news stuff, tried to figure out why stuff didnt work

--- a/app/Locale/deu/LC_MESSAGES/default.po
+++ b/app/Locale/deu/LC_MESSAGES/default.po
@@ -956,3 +956,9 @@ msgstr "Sobald wir deine Zahlung erhalten haben kannst du einen Sitzplatz reserv
 
 msgid  "You are already registered"
 msgstr "Du bist schon Registriert!"
+
+msgid  "Add Participant"
+msgstr "Team Beitreten"
+
+msgid  "Parent Participants"
+msgstr "Team"
